--- a/index.html
+++ b/index.html
@@ -65,7 +65,14 @@
       <section><h2>Significance</h2><p>This discovery highlights Thailand’s rich biodiversity and the importance of conserving highland ecosystems.</p></section>
     </div>
   </main>
-  <footer>&copy; 2025 โดย ChatGPT | ข้อมูลจาก Raffles Bulletin of Zoology</footer>
+  <footer>
+  ข้อมูลต้นฉบับ
+  <a href="https://www.researchgate.net/publication/264042102_h_a_new_genus_and_species_of_freshwater_crab_Crustacea_Decapoda_Brachyura_Potamidae_from_Nakhon_Si_Thammarat_Peninsular_Thailand"
+     target="_blank" rel="noopener noreferrer">
+    Rueangrit Promdam & Jaruwat Nabhitabhata
+  </a>
+</footer>
+
   <script>
     function switchTab(id) {
       const tabs = document.querySelectorAll('.tab');
