--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
         <div class="img-container"><img src="https://i.ibb.co/d0gn0n41/Nakhonsimon.jpg" alt="Nakhonsimon ramromensis"><p><small>ภาพจริงของปูเขารามโรม</small></p></div></section>
       <section id="habitat"><h2>ถิ่นอาศัย</h2><p>พบที่ระดับความสูง 996 เมตรเหนือระดับน้ำทะเล ตัวเต็มวัยอยู่ห่างจากแหล่งน้ำถาวร บ่งชี้ว่าเป็นปูบนบก</p></section>
       <section id="map"><h2>แผนที่</h2><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d76788.2261357839!2d99.78506051417311!3d8.24578974867559!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3052512ec00f6375%3A0xc5603ec9d23f3c6a!2z4Lii4Lit4LiU4LmA4LiC4Liy4Lij4Liy4Lih4LmC4Lij4Lih!5e1!3m2!1sth!2sth!4v1748655252954!5m2!1sth!2sth" allowfullscreen loading="lazy"></iframe></section>
-      <section id="significance"><h2>ความสำคัญ</h2><p>การค้นพบนี้แสดงถึงความหลากหลายทางชีวภาพของประเทศไทย และเน้นย้ำความสำคัญของการอนุรักษ์ระบบนิเวศบนภูเขา</p></section>
+      <section id="significance">
+        <h2>ความสำคัญ</h2>
+        <p>การค้นพบนี้แสดงถึงความหลากหลายทางชีวภาพและเน้นย้ำความสำคัญของการอนุรักษ์ระบบนิเวศบนภูเขา</p>
+        <p>ขอขอบคุณ คุณปกรณ์ ทวีผล เจ้าหน้าที่ช่อง 7สี นครศรีธรรมราช ที่แนะนำปูตัวนี้พร้อมทั้งช่วยเรื่องการเดินทางและที่พัก</p>
+      </section>
     </div>
     <div id="eng" class="tab-content">
       <section><h2>General Info</h2><p><strong>Scientific name:</strong> <em>Nakhonsimon ramromensis</em></p><p>A new species of freshwater crab found only at the summit of Khao Ram Rome, Thailand.</p></section>
